--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -5,10 +5,10 @@
 <a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
 <a class="button active navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
-{% if conf == "cscw2014" %}
-<a class="button navitem" href="/login">Log In</a>
+{% if login_id %}
+<a class="button" href="/logout">Log Out</a>
 {% else %}
-<a class="button navitem" href="/">All Conferences</a> 
+<a class="button" href="/login">Log In</a>
 {% endif %}
 {% endblock %}
 {% block content %}   
@@ -16,7 +16,7 @@
 <div class="blurb nav_papers">
 Tag sessions and papers you want to see and get updated recommendations on the fly. Use your likes, recommendations, and other filtering options to discover your personal schedule.
 {% if conf == "cscw2014" %}
-<br/><br/>Authors: <a class="button" href="/login">log in</a> to see your papers and those you liked during authorsourcing.
+<br/><br/>Authors: <a class="blue bold" href="/login">log in</a> to see your papers and those you liked during authorsourcing.
 {% endif %}
 </div>
 <div class="goto-link">
