--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -15,8 +15,8 @@
 
 <div class="blurb nav_papers">
 Tag sessions and papers you want to see and get updated recommendations on the fly. Use your likes, recommendations, and other filtering options to discover your personal schedule.
-{% if conf == "cscw2014" %}
-<br/><br/>Authors: <a class="blue bold" href="/login">log in</a> to see your papers and those you liked during authorsourcing.
+{% if login_id and conf == "cscw2014" %}
+<br/><br/>Authors: <a class="blue bold" href="/login">Log in</a> to see your papers and those you liked during authorsourcing.
 {% endif %}
 </div>
 <div class="goto-link">
