--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -15,7 +15,7 @@
 
 <div class="blurb nav_papers">
 Tag sessions and papers you want to see and get updated recommendations on the fly. Use your likes, recommendations, and other filtering options to discover your personal schedule.
-{% if login_id and conf == "cscw2014" %}
+{% if not login_id and conf == "cscw2014" %}
 <br/><br/>Authors: <a class="blue bold" href="/login">Log in</a> to see your papers and those you liked during authorsourcing.
 {% endif %}
 </div>
