--- a/server/templates/papers.html
+++ b/server/templates/papers.html
@@ -9,14 +9,14 @@
 {% if login_id %}
 <a class="button" href="/logout">Log Out</a>
 {% else %}
-<a class="button" href="/login?redirect_url=/{{conf}}">Log In</a>
+<a class="button" href="/login?redirect_url=/{{conf}}/papers">Log In</a>
 {% endif %}
 {% endblock %}
 {% block content %} 
 <div class="blurb">
 Tag papers you want to see and get social recommendations of other papers you may like. The recommendations update automatically as you tag new papers. Just click "Show More" to see more!
 {% if not login_id and conf == "cscw2014" %}
-<br/><br/>Authors: <a class="blue bold" href="/login">Log in</a> to see your papers and those you liked during authorsourcing.
+<br/><br/>Authors: <a class="blue bold" href="/login?redirect_url=/{{conf}}/papers">Log in</a> to see your papers and those you liked during authorsourcing.
 {% endif %}
 </div>
 
