--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -8,7 +8,7 @@
 {% if login_id %}
 <a class="button" href="/logout">Log Out</a>
 {% else %}
-<a class="button" href="/login?redirect_url=/{{conf}}">Log In</a>
+<a class="button" href="/login?redirect_url=/{{conf}}/papers">Log In</a>
 {% endif %}
 {% endblock %}
 {% block content %}
