--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -8,7 +8,7 @@
 {% if login_id %}
 <a class="button" href="/logout">Log Out</a>
 {% else %}
-<a class="button" href="/login?redirect_url=/{{conf}}">Log In</a>
+<a class="button" href="/login?redirect_url=/{{conf}}/schedule">Log In</a>
 {% endif %}
 {% endblock %}
 {% block content %}   
@@ -16,7 +16,7 @@
 <div class="blurb nav_papers">
 Tag sessions and papers you want to see and get updated recommendations on the fly. Use your likes, recommendations, and other filtering options to discover your personal schedule.
 {% if not login_id and conf == "cscw2014" %}
-<br/><br/>Authors: <a class="blue bold" href="/login">Log in</a> to see your papers and those you liked during authorsourcing.
+<br/><br/>Authors: <a class="blue bold" href="/login?redirect_url=/{{conf}}/schedule">Log in</a> to see your papers and those you liked during authorsourcing.
 {% endif %}
 </div>
 <div class="goto-link">
