--- a/server/templates/home.html
+++ b/server/templates/home.html
@@ -27,7 +27,7 @@
 </style>
 
 <div class="blurb">
-    Confer helps you build a personal schedule for conference you are attending. It helps you decide where to spend your precious time by providing social recommendations based on your interests.
+    Confer helps you build a personal schedule for conference you are attending. It helps you decide where to spend your time by providing social recommendations based on your interests.
 </div>
 
 <div id="home">
