--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -12,6 +12,14 @@
 {% endif %}
 {% endblock %}
 {% block content %}
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=652805441444150";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="goto-link">
 <br /> 
 <a class="button nav_papers" href="/{{conf}}/papers">Go to My Papers</a>
