--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -32,7 +32,7 @@
 	<table class="form">
 	</table>
 	<br />
-	<div class="fb-comments" data-href="http://example.com/comments" data-numposts="1" data-colorscheme="light" style="width:100%; !important"></div>
+	<div class="fb-comments" data-href="http://example.com/comments" data-numposts="1" data-colorscheme="light" data-width="940px"></div>
 	<h3 class="collapsible-title collapsible" id="similar_papers_toggle" data="similar_papers_container" value=""><span class="arrow arrow-down"></span> Papers similar to this paper:</h3>
 	<div id="similar_papers_container">
 	<table id="similar_papers" class="paper-container">		
