--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -416,7 +416,7 @@ textarea {
   border-bottom: 1px solid #2B2B2B;
   width: 100%;
   z-index: 100;
-  padding-left:1.5em;
+  padding:0em;
 }
 
 #wrap{
@@ -483,6 +483,8 @@ textarea {
   margin-top: 1.5em;
   margin-bottom: 3.5em;
   padding: 1.5em;
+  padding-left: 0;
+  padding-right: 0;
   background-color: #FFF;
 }
 
