--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -416,7 +416,7 @@ textarea {
   border-bottom: 1px solid #2B2B2B;
   width: 100%;
   z-index: 100;
-  padding:0em;
+  padding:0em 0.1em 0em 0.1em;
 }
 
 #wrap{
@@ -435,9 +435,9 @@ textarea {
 #headlink-right{
   position:absolute;
   top: 1.4em;
-  right: 0.7em;
+  right: 0.1em;
   color: #F6F6F6;
-  margin-right: 1.5em;
+  margin-right: 0em;
 }
 
 
