--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -6,9 +6,9 @@
 <a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
 <a class="button active navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
 {% if login_id %}
-<a class="button navitem" href="/logout">Log Out</a>
+<a class="button" href="/logout">Log Out</a>
 {% else %}
-<a class="button navitem" href="/login?redirect_url=/{{conf}}">Log In</a>
+<a class="button" href="/login?redirect_url=/{{conf}}">Log In</a>
 {% endif %}
 {% endblock %}
 {% block content %}  
