--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -12,14 +12,17 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=652805441444150";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = '<confer>'; // Required - Replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
 <div class="goto-link">
 <br /> 
 <a class="button nav_papers" href="/{{conf}}/papers">Go to My Papers</a>
