--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -12,17 +12,6 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-    var disqus_shortname = '<confer>'; // Required - Replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
 <div class="goto-link">
 <br /> 
 <a class="button nav_papers" href="/{{conf}}/papers">Go to My Papers</a>
@@ -35,7 +24,18 @@
 	<table class="form">
 	</table>
 	<br />
-	<div id="paper_comments"></div>
+	<div id="paper_comments">
+		<div id="disqus_thread"></div>
+		<script type="text/javascript">
+		    var disqus_shortname = 'confer'; // Required - Replace example with your forum shortname
+		    /* * * DON'T EDIT BELOW THIS LINE * * */
+		    (function() {
+		        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+		        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+		        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		    })();
+		</script>
+	</div>
 	<h3 class="collapsible-title collapsible" id="similar_papers_toggle" data="similar_papers_container" value=""><span class="arrow arrow-down"></span> Papers similar to this paper:</h3>
 	<div id="similar_papers_container">
 	<table id="similar_papers" class="paper-container">		
