--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -28,6 +28,7 @@
 		<div id="disqus_thread"></div>
 		<script type="text/javascript">
 		    var disqus_shortname = 'confer'; // Required - Replace example with your forum shortname
+			var disqus_url = window.location.href;
 		    /* * * DON'T EDIT BELOW THIS LINE * * */
 		    (function() {
 		        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
