--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -26,16 +26,6 @@
 	<br />
 	<div id="paper_comments">
 		<div id="disqus_thread"></div>
-		<script type="text/javascript">
-		    var disqus_shortname = 'confer'; // Required - Replace example with your forum shortname
-			var disqus_url = window.location.href;
-		    /* * * DON'T EDIT BELOW THIS LINE * * */
-		    (function() {
-		        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-		        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-		        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-		    })();
-		</script>
 	</div>
 	<h3 class="collapsible-title collapsible" id="similar_papers_toggle" data="similar_papers_container" value=""><span class="arrow arrow-down"></span> Papers similar to this paper:</h3>
 	<div id="similar_papers_container">
@@ -58,4 +48,16 @@ $(document).ready(function(){
 });
 </script>
 <script type="text/javascript" src="/static/javascript/confer.js"></script>
+<script type="text/javascript">
+    var disqus_shortname = 'confer'; // Required - Replace example with your forum shortname
+	var disqus_url = window.location.href;
+	var disqus_identifier = get_hash();
+	var disqus_title = get_hash();
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
 {% endblock %}
