--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -12,6 +12,14 @@
 {% endif %}
 {% endblock %}
 {% block content %}
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=652805441444150";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="goto-link">
 <br /> 
 <a class="button nav_papers" href="/{{conf}}/papers">Go to My Papers</a>
@@ -25,7 +33,6 @@
 	</table>
 	<br />
 	<div id="paper_comments">
-		<div id="disqus_thread"></div>
 	</div>
 	<h3 class="collapsible-title collapsible" id="similar_papers_toggle" data="similar_papers_container" value=""><span class="arrow arrow-down"></span> Papers similar to this paper:</h3>
 	<div id="similar_papers_container">
@@ -48,16 +55,4 @@ $(document).ready(function(){
 });
 </script>
 <script type="text/javascript" src="/static/javascript/confer.js"></script>
-<script type="text/javascript">
-    var disqus_shortname = 'confer'; // Required - Replace example with your forum shortname
-	var disqus_url = window.location.href;
-	var disqus_identifier = get_hash();
-	var disqus_title = get_hash();
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-</script>
 {% endblock %}
