FB comment footer -- hide

--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -1210,3 +1210,7 @@ form .credit {
  .fb-comments, .fb-comments * {
     width:100% !important;
 }
+
+.fbConnectWidgetFooter {
+  display: none !important;
+}
