FB comment footer -- no min height

--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -1210,3 +1210,7 @@ form .credit {
  .fb-comments, .fb-comments * {
     width:100% !important;
 }
+
+.fbFeedbackContent {
+  min-height: 0 !important;
+}
