app register template

--- a/server/templates/apps.html
+++ b/server/templates/apps.html
@@ -19,8 +19,10 @@
     </tr>
     {% endfor %}
   </table>
+  <br />
+  <br />
 <div>
-	<a class="button" href="/developr/register_app">Create a New App</a>
+	<a class="button" href="/developer/register_app">Create a New App</a>
 </div>
 </div>  <!-- confer team -->
   
