permissions per user per app

--- a/server/templates/app_access.html
+++ b/server/templates/app_access.html
@@ -6,7 +6,7 @@
 {% block content %}
 <script type="text/javascript">
 </script>
-<form method="POST" action="/allow_access">
+<form method="POST" action="/developer/allow_access">
 	{% csrf_token %}
 	<input type="hidden" name="redirect_url" value="{{redirect_url}}" />
 	<h3>Access to {{app_name}}</h3>
