--- a/server/templates/app_access.html
+++ b/server/templates/app_access.html
@@ -1,7 +1,11 @@
 {% extends "login-layout.html" %}
 {% block links %}
 <span id="logged_in_name">{{login_name}}</span> &nbsp;
-<a class="button" href="/">Home</a>
+{% if login_id %}
+<a class="button" href="/logout">Log Out</a>
+{% else %}
+<a class="button" href="/login">Log In</a>
+{% endif %}
 {% endblock %}
 {% block content %}
 <script type="text/javascript">
