--- a/server/templates/app_access.html
+++ b/server/templates/app_access.html
@@ -26,8 +26,7 @@
     </div>
 	<input type="hidden" name="user_email" id="user_email" value="{{user_email}}" />
 	<input type="hidden" name="app_id" id="app_id" value="{{app_id}}" />
-	<label for="access_val">Access: </label>
-	<input type="radio" name="access_val" value="allow"> Allow </input>
+	<input type="radio" name="access_val" value="allow" checked="checked"> Allow </input> &nbsp;&nbsp;
 	<input type="radio" name="access_val" value="deny"> Deny </input> <br /><br />
 	<input type="submit" class="button" value="Save" />
 </form>
