--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -14,6 +14,7 @@
 {% block content %}
 <div id="fb-root"></div>
 <script>
+if (fb_comment == true) {
 (function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -21,6 +22,7 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=652805441444150";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
+}
 </script>
 <div class="goto-link">
 <br /> 
