--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -56,20 +56,19 @@ var svg = d3.select("#visualization_container").append("svg")
 
 d3.json("/{{conf}}/paper_paper_graph", function(error, graph) {
   // Create a force layout to display nodes.
-  console.log(graph)
   var force = d3.layout.force()
   	  .gravity(1)
       .charge(-400)
       .linkDistance(30)
       .nodes(graph.nodes)
-      .links(graph.edges)
+      .links(graph.links)
       .size([width, height]);
 	 
 	  	
 
   // Add the edges to the SVG.
   var link = svg.selectAll('.link')
-      .data(graph.edges)
+      .data(graph.links)
       .enter().append('line')
       .attr('class', 'link')
       .style('stroke-width', 1);
@@ -82,17 +81,17 @@ d3.json("/{{conf}}/paper_paper_graph", function(error, graph) {
       .call(force.drag);
 	  
   node.append("circle")
-      .attr('r', function(d) { return get_size(d.weight); })
+      .attr('r', 5)
       .style("fill", "#cfeb8a")
       .style("fill-opacity", 0.8);
   
   node.append("text")
   	.attr("x", 12)
   	.attr("dy", ".10em")
-  	.text(function(d) { return d.session; });
+  	.text(function(d) { return d; });
 
   node.append("title")
-      .text(function(d) { return d.title + " (" + d.session + ")"; });
+      .text(function(d) { return entities[d] });
 
   // Hook up some events to D3.js.
   force.on('tick', function() {
