--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -54,7 +54,7 @@ var svg = d3.select("#visualization_container").append("svg")
     .attr("height", height);
 
 
-d3.json("/{{conf}}/paper_paper_graph", function(error, graph) {
+d3.json("/{{conf}}/paper_paper_graph?strength={{strength}}", function(error, graph) {
   // Create a force layout to display nodes.
   var force = d3.layout.force()
   	  .gravity(1)
