--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -48,7 +48,8 @@ function get_size(weight){
 }
 
 function get_title(id){
-	return entities[id].title;
+	console.log(id)
+	return entities[id]['title'];
 }
 
 
