--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -48,8 +48,7 @@ function get_size(weight){
 }
 
 function get_title(id){
-	console.log(id)
-	return entities[id]['title'];
+	return entities[id.toString()]['title'];
 }
 
 
