--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -48,6 +48,9 @@ function get_size(weight){
 }
 
 function get_title(id){
+	console.log(id)
+	console.log(entities)
+	console.log(entities[id.toString()])
 	return entities[id.toString()]['title'];
 }
 
