--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -48,10 +48,12 @@ function get_size(weight){
 }
 
 function get_title(id){
-	console.log(id)
-	console.log(entities)
-	console.log(entities[id.toString()])
-	return entities[id.toString()]['title'];
+	paper = entities[id.toString()]
+	if(paper != null){
+		return paper['title'];
+	}else {
+		return ""
+	}
 }
 
 
