--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -48,7 +48,7 @@ function get_size(weight){
 }
 
 function get_width(weight){
-	return (1 + Math.log(weight));
+	return (1 + Math.log(weight*2));
 }
 
 function get_title(id){
