--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -44,7 +44,7 @@ var width = 1024,
 
 
 function get_size(weight){
-	return (1 + Math.log(weight));
+	return (1 + Math.log(weight*3));
 }
 
 function get_width(weight){
