--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -44,7 +44,7 @@ var width = 1024,
 
 
 function get_size(weight){
-	return (1 + Math.log(weight));
+	return weight;
 }
 
 function get_width(weight){
@@ -72,7 +72,7 @@ d3.json("/{{conf}}/paper_paper_graph?strength={{strength}}", function(error, gra
   var force = d3.layout.force()
   	  .gravity(1)
       .charge(-400)
-      .linkDistance(30)
+      .linkDistance(function(a){return 100/a.value+5})
       .nodes(graph.nodes)
       .links(graph.links)
       .size([width, height]);
