--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -70,9 +70,9 @@ var svg = d3.select("#visualization_container").append("svg")
 d3.json("/{{conf}}/paper_paper_graph?strength={{strength}}", function(error, graph) {
   // Create a force layout to display nodes.
   var force = d3.layout.force()
-  	  .gravity(1.5)
-      .charge(-500)
-      .linkDistance(function(e){return 100/e.weight+5})
+  	  .gravity(1)
+      .charge(-80)
+      .linkDistance(function(e){return 50/(1 + e.weight)})
       .nodes(graph.nodes)
       .links(graph.links)
       .size([width, height]);
