--- a/server/templates/visualizations.html
+++ b/server/templates/visualizations.html
@@ -71,7 +71,7 @@ d3.json("/{{conf}}/paper_paper_graph?strength={{strength}}", function(error, gra
   // Create a force layout to display nodes.
   var force = d3.layout.force()
       .charge(-100)
-      .linkDistance(function(e){return 50/(1 + e.weight/2)})
+      .linkDistance(function(e){return 50/(1 + e.weight*2)})
       .nodes(graph.nodes)
       .links(graph.links)
       .size([width, height]);
