--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -13,6 +13,8 @@ Confer Template Layout
 {% endblock %}
 <head>
 <title>Confer</title>
+{% block meta %}
+{% endblock %}
 <meta charset="utf-8">
 
 <meta http-equiv="Pragma" content="no-cache">
