--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block meta %}
+<meta property="fb:app_id" content="652805441444150"/>
+{% endblock %}
 {% block links %}
 <span id="logged_in_name">{{login_name}}</span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
