add meta description

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -16,6 +16,7 @@ Confer Template Layout
 {% block meta %}
 {% endblock %}
 <meta charset="utf-8">
+<meta name="Description" content="Confer helps you build a personal schedule for conference you are attending. It helps you decide where to spend your time by providing social recommendations based on your interests." />
 
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="-1">
