--- a/server/templates/feed.html
+++ b/server/templates/feed.html
@@ -23,7 +23,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-<div class="fb-activity" data-site="developers.facebook.com" data-action="likes, recommends" data-colorscheme="light" data-header="true"></div>
+<div class="fb-activity" data-site="confer.csail.mit.edu" data-action="comments" data-filter="/{{conf}}" data-colorscheme="light" data-header="true"></div>
 
 
 {% endblock %}
