--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -31,7 +31,7 @@ The Meetups feature allows you to discover people with similar interests as your
       <tr class="clickable">
         <td class="content">
           <ul>
-            <li><h3><a href="mailto:{{p.email}}">{{p.name}}</a></h3></li>
+            <li><h3><a href="mailto:?to={{p.email}}&amp;title=\"Confer Meetup Recommendation\"&amp;body=\"Hi there!\n\n Confer thinks that we too have similar research interests! Would you be interested in meeting?\n\"">{{p.name}}</a></h3></li>
             <li><span class="paper-subtype" style="text-align: left !important;">
               You and {{p.name}} have {{p.common_likes}} papers in common.</li>
               </span>
@@ -52,7 +52,6 @@ The Meetups feature allows you to discover people with similar interests as your
 {% endblock %}
 
 {% block javascript %} 
-
 <script type="text/javascript">
 $(document).ready(function(){
   $("#logged_in_name").html(localStorage.getItem('login_name'))
