--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -31,7 +31,7 @@ The Meetups feature allows you to discover people with similar interests as your
       <tr class="clickable">
         <td class="content">
           <ul>
-            <li><h3><a href="mailto:?to={{p.email}}&amp;title=\"Confer Meetup Recommendation\"&amp;body=\"Hi there!\n\n Confer thinks that we too have similar research interests! Would you be interested in meeting?\n\"" target="_blank">{{p.name}}</a></h3></li>
+            <li><h3><a href="mailto:?to={{p.email}}&amp;title=Confer Meetup Recommendation&amp;body=Hi there! Confer thinks that we too have similar research interests! Would you be interested in meeting?" target="_blank">{{p.name}}</a></h3></li>
             <li><span class="paper-subtype" style="text-align: left !important;">
               You and {{p.name}} have {{p.common_likes}} papers in common.</li>
               </span>
