--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -31,9 +31,9 @@ The Meetups feature allows you to discover people with similar interests as your
       <tr class="clickable">
         <td class="content">
           <ul>
-            <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}}!&amp;body=Hi {{p.email}}! Confer thinks that we two have similar research interests! Would you be interested in meeting?" target="_blank">{{p.name}}</a>&nbsp; &nbsp;<a class="button" href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}}!&amp;body=Hi {{p.email}}! Confer thinks that we two have similar research interests! Would you be interested in meeting?" target="_blank">Say Hi</a></h3></li>
+            <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}}!&amp;body=Hi {{p.email}}! Confer thinks that we two have similar research interests! Would you be interested in meeting?" target="_blank">{{p.name}}</a></h3></li>
             <li><span class="paper-subtype" style="text-align: left !important;">
-              You and {{p.name}} have {{p.common_likes}} papers in common.</li>
+              You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue bold" href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}}!&amp;body=Hi {{p.email}}! Confer thinks that we two have similar research interests! Would you be interested in meeting?" target="_blank">Say Hi!</a></li>
               </span>
           </ul>
         </td>
