--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -33,7 +33,7 @@ The Meetups feature allows you to discover people with similar interests as your
           <ul>
             <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}}!&amp;body=Hi {{p.email}}! Confer thinks that we two have similar research interests! Would you be interested in meeting?" target="_blank">{{p.name}}</a></h3></li>
             <li><span class="paper-subtype" style="text-align: left !important;">
-              You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}}!&amp;body=Hi {{p.email}}! Confer thinks that we two have similar research interests! Would you be interested in meeting?" target="_blank">Say Hi!</a></li>
+              You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}}!&amp;body=Hi {{p.email}}! Confer thinks that we two have similar research interests! Would you be interested in meeting?" target="_blank">Say Hi!</a> to {{p.name}}</li>
               </span>
           </ul>
         </td>
