--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -31,10 +31,10 @@ The Meetups feature allows you to discover people with similar interests as your
       <tr class="clickable">
         <td class="content">
           <ul>
-            <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}}!&amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?" target="_blank">{{p.name}}</a></h3></li>
+            <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}!&amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">{{p.name}}</a></h3></li>
             <li><span class="paper-subtype" style="text-align: left !important;">
-              You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hi from {{login_name}},
-              &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?" target="_blank">Send hello</a> to {{p.name}}!</li>
+              You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}},
+              &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Send hello</a> to {{p.name}}!</li>
               </span>
           </ul>
         </td>
