credit to lenskit

--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -79,7 +79,7 @@ Confer Template Layout
 {% block credits %}
 <div class="credit">
   Brought to you by: <a href="/team">Confer Team</a>. Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a><br/>
-  Confer recommendations are powered by <a href="http://lenskit.grouplens.org/">The Lenskit Recommender Toolkit</a>.
+  Recommendations powered by <a href="http://lenskit.grouplens.org/">The Lenskit Recommender Toolkit</a>.
 </div>
 {% endblock %}
 
