--- a/server/templates/404.html
+++ b/server/templates/404.html
@@ -25,9 +25,10 @@
 #headlink-left{
 }
 </style>
+<div id="home">
 <h3> 404 -- Page Not Found </h3>
- Looks like the page you were looking for doesn't exist. 
-
+ Looks like the page you were expecting to see doesn't exist. 
+</div>
 
 </div>
 {% endblock %}
