--- a/server/templates/500.html
+++ b/server/templates/500.html
@@ -25,8 +25,10 @@
 #headlink-left{
 }
 </style>
+<div id="home">
 <h3> 500 -- Internal Server Error </h3>
-Looks like something went wrong! We are on it.
+Looks like this is not what you were expecting! Something went wrong - we are looking into it.
+<div id="home">
 
 </div>
 {% endblock %}
