--- a/server/templates/schedule.html
+++ b/server/templates/schedule.html
@@ -15,9 +15,11 @@
 
 <div class="blurb nav_papers">
 Tag sessions and papers you want to see and get updated recommendations on the fly. Use your likes, recommendations, and other filtering options to discover your personal schedule.
-{% if not login_id and conf == "cscw2014" %}
-<br/><br/>Authors: <a class="blue bold" href="/login?redirect_url=/{{conf}}/schedule">Log in</a> to see your papers and those you liked during authorsourcing.
+<div class="goto-link">
+{% if meetups_enabled  == False %}
+<br/><br/>Want to find people having similar interests as yours? Try <a class="blue bold" href="/{{conf}}/meetups">Meetups</a>!
 {% endif %}
+</div>
 </div>
 <div class="goto-link">
 <a class="button nav_papers" href="/{{conf}}/papers">Go to My Papers</a>
