--- a/server/templates/500.html
+++ b/server/templates/500.html
@@ -25,10 +25,12 @@
 #headlink-left{
 }
 </style>
-<div id="home">
+<div id="home" class="form">
 <h3> 500 -- Internal Server Error </h3>
+<hr />
+<div id="msg">
 Looks like this is not what you were expecting! Something went wrong - we are looking into it.
-<div id="home">
+</div>
 
 </div>
 {% endblock %}
