--- a/server/templates/404.html
+++ b/server/templates/404.html
@@ -25,8 +25,10 @@
 #headlink-left{
 }
 </style>
-<div id="home">
+<div id="home" class="form">
 <h3> 404 -- Page Not Found </h3>
+<hr />
+<div id="msg">
  Looks like the page you were expecting to see doesn't exist. 
 </div>
 
