--- a/server/templates/paper.html
+++ b/server/templates/paper.html
@@ -36,7 +36,7 @@ if (fb_comment == true) {
 <!-- Selected Paper -->
 <div id="selected_paper">
   <!--<h3><span class="gray">Selected Paper</span></h3>-->
-	<table class="form">
+	<table class="paper_details">
 	</table>
 	<br />
 	<div id="paper_comments">
