--- a/server/templates/404.html
+++ b/server/templates/404.html
@@ -11,12 +11,7 @@
 </span>
 {% endblock %}
 {% block links %}
-<span id="logged_in_name">{{login_name}}</span> &nbsp;
-{% if login_id %}
-<a class="button" href="/logout">Log Out</a>
-{% else %}
-<a class="button" href="/login">Log In</a>
-{% endif %}
+<a class="button" href="/">Home</a>
 {% endblock %}
 {% block static %}
 {% endblock %}
