--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -78,8 +78,8 @@ Confer Template Layout
 {% endblock %}
 {% block credits %}
 <div class="credit">
-  Brought to you by: <a href="/team">Confer Team</a>. Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a><br/>
-  Recommendations powered by <a href="http://lenskit.grouplens.org/">The Lenskit Recommender Toolkit</a>.
+  <a href="/team">About us</a> &nbsp; &nbsp; <a href="/credits">Credits</a> <br />
+  Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a>
 </div>
 {% endblock %}
 
