--- a/server/templates/login-layout.html
+++ b/server/templates/login-layout.html
@@ -47,7 +47,8 @@ Confer Login/Register Template Layout
 	{% endblock %}
 	{% block credits %}
 	<div class="credit">
-	  Brought to you by: <a href="/team">Confer Team</a>. Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a><br/>
+  	<a href="/team">About us</a> &nbsp; &nbsp; <a href="/credits">Credits</a> <br />
+  	Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a>
 	</div>
 	{% endblock %}
 	</div>
