--- a/server/templates/credits.html
+++ b/server/templates/credits.html
@@ -8,19 +8,13 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-<div class="blurb">
-
-</div>
 <!-- Confer Team -->
 <div id="confer_credits_container">
-<h3>Confer uses following thirs-party tools:</h3>
+<h3>Confer Technology Stack includes following third-party tools:</h3>
 <ul>
-<li>Apache Webserver</li>
-<li>Python + Django</li>
-<li>Java</li>
-<li>Apache Lucene</li>
-<li>The Lenskit Recommender Framework</li>
-<li>Mahout</li>
+<li>Apache Webserver -- <a href="http://httpd.apache.org/">http://httpd.apache.org/</a></li>
+<li>Apache Lucene -- <a href="http://lucene.apache.org/">http://lucene.apache.org/</a></li>
+<li>The Lenskit Recommender Framework -- <a href="http://lenskit.grouplens.org/">http://lenskit.grouplens.org/</a></li>
 <li></li>
 <li></li>
 </ul>
