--- a/server/templates/credits.html
+++ b/server/templates/credits.html
@@ -12,9 +12,9 @@
 <div id="confer_credits_container">
 <h3>Confer Technology Stack includes following third-party tools:</h3>
 <ul>
-<li>Apache Webserver -- <a href="http://httpd.apache.org/">http://httpd.apache.org/</a></li>
-<li>Apache Lucene -- <a href="http://lucene.apache.org/">http://lucene.apache.org/</a></li>
-<li>The Lenskit Recommender Framework -- <a href="http://lenskit.grouplens.org/">http://lenskit.grouplens.org/</a></li>
+<li>Apache Webserver -- <a class="blue" href="http://httpd.apache.org/">http://httpd.apache.org/</a></li>
+<li>Apache Lucene -- <a class="blue" href="http://lucene.apache.org/">http://lucene.apache.org/</a></li>
+<li>The Lenskit Recommender Framework -- <a class="blue" href="http://lenskit.grouplens.org/">http://lenskit.grouplens.org/</a></li>
 <li></li>
 <li></li>
 </ul>
