--- a/server/templates/credits.html
+++ b/server/templates/credits.html
@@ -11,13 +11,14 @@
 <!-- Confer Team -->
 <div id="confer_credits_container">
 <h3>Third-party tools:</h3>
-<ol>
-<li>Apache Webserver -- <a class="blue" href="http://httpd.apache.org/">http://httpd.apache.org/</a></li>
-<li>Apache Lucene -- <a class="blue" href="http://lucene.apache.org/">http://lucene.apache.org/</a></li>
-<li>The Lenskit Recommender Framework -- <a class="blue" href="http://lenskit.grouplens.org/">http://lenskit.grouplens.org/</a></li>
+<ul>
+<li>1. Apache Webserver -- <a class="blue" href="http://httpd.apache.org/">http://httpd.apache.org</a></li>
+<li>2. Apache Lucene -- <a class="blue" href="http://lucene.apache.org/">http://lucene.apache.org</a></li>
+<li>3. The Lenskit Recommender Framework -- <a class="blue" href="http://lenskit.grouplens.org/">http://lenskit.grouplens.org</a></li>
+<li>4. PostgreSql -- <a class="blue" href="http://www.postgresql.org/">http://www.postgresql.org</a></li>
 <li></li>
 <li></li>
-</ol>
+</ul>
   
 </div>  <!-- confer team -->
   
