--- a/server/templates/login-layout.html
+++ b/server/templates/login-layout.html
@@ -47,7 +47,7 @@ Confer Login/Register Template Layout
 	{% endblock %}
 	{% block credits %}
 	<div class="credit">
-  	<a href="/team">About us</a> &nbsp; &nbsp; <a href="/credits">Credits</a> <br />
+  	<a href="/team">About us</a> &nbsp; . &nbsp; <a href="/credits">Credits</a> <br />
   	Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a>
 	</div>
 	{% endblock %}
