--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -78,7 +78,7 @@ Confer Template Layout
 {% endblock %}
 {% block credits %}
 <div class="credit">
-  <a href="/team">About us</a> &nbsp; . &nbsp; <a href="/credits">Credits</a> <br />
+  <a href="/team">Confer Team</a> &nbsp; . &nbsp; <a href="/credits">Credits</a>  &nbsp; . &nbsp; <a href="/developer">Confer APIs</a><br />
   Problems or comments? <a href="mailto:confer@csail.mit.edu">confer@csail.mit.edu</a>
 </div>
 {% endblock %}
