--- a/server/templates/developer.html
+++ b/server/templates/developer.html
@@ -15,16 +15,18 @@ Use the Confer APIs for querying user's preferences, recommendations and network
 <div>
 <h3>Public Data</h3>
 <p style="padding-top:1em;">
-For any conference you can get all the public data here -- http://confer.csail.mit.edu/static/conf/&lt;conf-name&gt;/data/
+For any conference you can get all the public data here -- <a href="#">http://confer.csail.mit.edu/static/conf/&lt;conf-name&gt;/data/</a>
 
 For eg:
 <ul>
 <li>
-CHI 2014 Data: http://confer.csail.mit.edu/static/conf/cscw2014/data/ </li>
+CSCW 2014 Data: <a href="http://confer.csail.mit.edu/static/conf/cscw2014/data/">http://confer.csail.mit.edu/static/conf/cscw2014/data/</a> </li>
 <li>
-CHI 2013 Data: http://confer.csail.mit.edu/static/conf/chi2014/data/ </li>
+CHI 2013 Data: <a href="http://confer.csail.mit.edu/static/conf/chi2014/data/">http://confer.csail.mit.edu/static/conf/chi2014/data/</a> </li>
 </ul>
 </p>
+<br />
+<br />
 <h3>User's Preference Data</h3>
 <p style="padding-top:1em;">
 You can also get a user's personal data through confer-connect if the user authorize your app to collect his/her data. 
@@ -34,11 +36,54 @@ Step 1: Create a confer app at http://confer.csail.mit.edu/developer/apps
 </li>
 <li>
 Step 2: Call confer APIs with your app token to get user's private data:
-<ul><li>
-	Python Example: https://github.com/abhardwaj/confer/tree/master/examples</li>
-	<li>PHP Example: https://github.com/abhardwaj/confer/tree/master/examples</li>
-	</ul>
-</li>
+<pre>
+# Step 1: Create your app at http://confer.csail.mit.edu/developer/apps (click on the button 'Create a New App')
+
+# Step 2: You can get your app_token at http://confer.csail.mit.edu/developer/apps at any time
+
+# Step 3: Redirect your first-time users to http://confer.csail.mit.edu/developer/allow_access?app_id=<your app id> 
+#         so that they can allow your app to access their data.
+
+
+
+host = 'confer.csail.mit.edu'
+app_id = 'karger' #  your app_id
+app_token = 'cc9fd3c3400632d4ffd09a2077f54d1fb0e434b1' # your app token
+conf_id = 'chi2014' # conference id
+
+
+def http_post(host, path, params):
+  conn = httplib.HTTPConnection(host)
+  headers = {
+      "Content-type": "application/x-www-form-urlencoded",
+      "Accept": "text/plain"
+    }
+  params = urllib.urlencode(params)
+  conn.request("POST", path, params, headers) 
+  res = conn.getresponse().read()
+  return json.loads(res)
+
+# get likes for a confer login_id
+print http_post(host, '/api/likes', {
+    'login_id': 'anantb@csail.mit.edu',
+    'conf_id': conf_id,
+    'app_id': app_id,
+    'app_token': app_token
+  })
+
+# If you get msg = "ACCESS_DENIED" in the response, it means user has revoked the access to your app. 
+# You can redirect the user to http://confer.csail.mit.edu/developer/allow_access?app_id=test_app to
+# grant the access
+
+# get similar_people for a confer login_id
+print http_post(host, '/api/similar_people', {
+    'login_id': 'anantb@csail.mit.edu',
+    'conf_id': conf_id,
+    'app_id': app_id,
+    'app_token': app_token
+  })
+
+</pre>
 </p>
 
 
