--- a/server/templates/developer.html
+++ b/server/templates/developer.html
@@ -16,13 +16,13 @@ Use the Confer APIs for querying user's preferences, recommendations and network
 <h3>Public Data</h3>
 <p style="padding-top:1em;">
 For any conference you can get all the public data here -- <a href="#">http://confer.csail.mit.edu/static/conf/&lt;conf-name&gt;/data/</a>
-
+<br />
 For eg:
 <ul>
 <li>
-CSCW 2014 Data: <a href="http://confer.csail.mit.edu/static/conf/cscw2014/data/">http://confer.csail.mit.edu/static/conf/cscw2014/data/</a> </li>
+CSCW 2014 Data: <a class="blue" href="http://confer.csail.mit.edu/static/conf/cscw2014/data/">http://confer.csail.mit.edu/static/conf/cscw2014/data/</a> </li>
 <li>
-CHI 2013 Data: <a href="http://confer.csail.mit.edu/static/conf/chi2014/data/">http://confer.csail.mit.edu/static/conf/chi2014/data/</a> </li>
+CHI 2013 Data: <a class="blue" href="http://confer.csail.mit.edu/static/conf/chi2014/data/">http://confer.csail.mit.edu/static/conf/chi2014/data/</a> </li>
 </ul>
 </p>
 <br />
@@ -32,10 +32,11 @@ CHI 2013 Data: <a href="http://confer.csail.mit.edu/static/conf/chi2014/data/">h
 You can also get a user's personal data through confer-connect if the user authorize your app to collect his/her data. 
 <ul>
 <li>
-Step 1: Create a confer app at http://confer.csail.mit.edu/developer/apps
+Step 1: Create a confer app at <a class="blue" href="http://confer.csail.mit.edu/developer/apps">http://confer.csail.mit.edu/developer/apps</a>
 </li>
 <li>
 Step 2: Call confer APIs with your app token to get user's private data:
+<div style="height 10em; border:1px solid gray;">
 <pre>
 # Step 1: Create your app at http://confer.csail.mit.edu/developer/apps (click on the button 'Create a New App')
 
@@ -84,6 +85,7 @@ print http_post(host, '/api/similar_people', {
   })
 
 </pre>
+</div>
 </p>
 
 
