--- a/server/templates/developer.html
+++ b/server/templates/developer.html
@@ -37,7 +37,7 @@ Step 1: Create a confer app at <a class="blue" href="http://confer.csail.mit.edu
 <li>
 Step 2: Call confer APIs with your app token to get user's private data:
 <br /> <br />
-<div style="height 8em; border:1px solid gray; padding:1em; overflow-y:scroll;">
+<div style="height:8em; border:1px solid gray; padding:1em; overflow-y:scroll;">
 <pre>
 # Step 1: Create your app at http://confer.csail.mit.edu/developer/apps (click on the button 'Create a New App')
 
